k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dr
  labels:
    app.kubernetes.io/part-of: dr-hotel-comparison
