k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dr-web
  namespace: dr
  labels:
    app: dr-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dr-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dr-web
    spec:
      containers:
        - name: dr-web
          image: dr-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 20m
              memory: 24Mi
            limits:
              cpu: 200m
              memory: 96Mi
